--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -2,15 +2,15 @@ specVersion: 0.0.3
 description: >-
   A secure & decentralized way to address resources on and off the blockchain
   using simple, human-readable names. Access domains and transfer history.
-repository: "https://github.com/pulsedomains/pns-subgraph"
+repository: 'https://github.com/pulsedomains/pns-subgraph'
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: ENSRegistry
-    network: pulsechain
+    network: mainnet
     source:
-      address: "0x50A3F84528CBA0cF63d9f9eFD00BCc4B7F03a870"
+      address: '0x937C30F8F6684009D0686CA9573db7f3Ba1f4266'
       abi: EnsRegistry
     mapping:
       kind: ethereum/events
@@ -25,17 +25,17 @@ dataSources:
         - name: EnsRegistry
           file: ./abis/Registry.json
       eventHandlers:
-        - event: "Transfer(indexed bytes32,address)"
+        - event: 'Transfer(indexed bytes32,address)'
           handler: handleTransfer
-        - event: "NewOwner(indexed bytes32,indexed bytes32,address)"
+        - event: 'NewOwner(indexed bytes32,indexed bytes32,address)'
           handler: handleNewOwner
-        - event: "NewResolver(indexed bytes32,address)"
+        - event: 'NewResolver(indexed bytes32,address)'
           handler: handleNewResolver
-        - event: "NewTTL(indexed bytes32,uint64)"
+        - event: 'NewTTL(indexed bytes32,uint64)'
           handler: handleNewTTL
   - kind: ethereum/contract
     name: Resolver
-    network: pulsechain
+    network: mainnet
     source:
       abi: Resolver
     mapping:
@@ -57,31 +57,31 @@ dataSources:
         - name: Resolver
           file: ./abis/PublicResolver.json
       eventHandlers:
-        - event: "ABIChanged(indexed bytes32,indexed uint256)"
+        - event: 'ABIChanged(indexed bytes32,indexed uint256)'
           handler: handleABIChanged
-        - event: "AddrChanged(indexed bytes32,address)"
+        - event: 'AddrChanged(indexed bytes32,address)'
           handler: handleAddrChanged
-        - event: "AddressChanged(indexed bytes32,uint256,bytes)"
+        - event: 'AddressChanged(indexed bytes32,uint256,bytes)'
           handler: handleMulticoinAddrChanged
         - event: >-
             AuthorisationChanged(indexed bytes32,indexed address,indexed
             address,bool)
           handler: handleAuthorisationChanged
-        - event: "ContenthashChanged(indexed bytes32,bytes)"
+        - event: 'ContenthashChanged(indexed bytes32,bytes)'
           handler: handleContentHashChanged
-        - event: "InterfaceChanged(indexed bytes32,indexed bytes4,address)"
+        - event: 'InterfaceChanged(indexed bytes32,indexed bytes4,address)'
           handler: handleInterfaceChanged
-        - event: "NameChanged(indexed bytes32,string)"
+        - event: 'NameChanged(indexed bytes32,string)'
           handler: handleNameChanged
-        - event: "PubkeyChanged(indexed bytes32,bytes32,bytes32)"
+        - event: 'PubkeyChanged(indexed bytes32,bytes32,bytes32)'
           handler: handlePubkeyChanged
-        - event: "TextChanged(indexed bytes32,indexed string,string)"
+        - event: 'TextChanged(indexed bytes32,indexed string,string)'
           handler: handleTextChanged
   - kind: ethereum/contract
     name: BaseRegistrar
-    network: pulsechain
+    network: mainnet
     source:
-      address: "0x52F4a9a5333b25755d0Cd769490823D4b4278dfc"
+      address: '0x0EC316c12d1C76366A434D5bF471C4cdAb4f243C'
       abi: BaseRegistrar
     mapping:
       kind: ethereum/events
@@ -97,17 +97,17 @@ dataSources:
         - name: BaseRegistrar
           file: ./abis/BaseRegistrar.json
       eventHandlers:
-        - event: "NameRegistered(indexed uint256,indexed address,uint256)"
+        - event: 'NameRegistered(indexed uint256,indexed address,uint256)'
           handler: handleNameRegistered
-        - event: "NameRenewed(indexed uint256,uint256)"
+        - event: 'NameRenewed(indexed uint256,uint256)'
           handler: handleNameRenewed
-        - event: "Transfer(indexed address,indexed address,indexed uint256)"
+        - event: 'Transfer(indexed address,indexed address,indexed uint256)'
           handler: handleNameTransferred
   - kind: ethereum/contract
     name: EthRegistrarController
-    network: pulsechain
+    network: mainnet
     source:
-      address: "0x5Cc9D5E2240b931A5a686d5FCFC95bd31C7593EF"
+      address: '0xF970956E586cEBf6d13702B025D6D7EeCaF8C548'
       abi: EthRegistrarController
     mapping:
       kind: ethereum/events
@@ -124,5 +124,5 @@ dataSources:
             NameRegistered(string,indexed bytes32,indexed
             address,uint256,uint256)
           handler: handleNameRegisteredByController
-        - event: "NameRenewed(string,indexed bytes32,uint256,uint256)"
+        - event: 'NameRenewed(string,indexed bytes32,uint256,uint256)'
           handler: handleNameRenewedByController
